--- a/HTML_CSS/CSS_Fundamentals/index.html
+++ b/HTML_CSS/CSS_Fundamentals/index.html
@@ -11,14 +11,89 @@
 
 <body>
     <div class="container">
-        <main>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque blanditiis dicta, rem possimus unde eos
-                eum, neque dolore harum repellat distinctio ullam voluptatibus sapiente alias. Aliquam doloribus
-                eligendi unde suscipit.</p>
+        <div class="flex-page">
+            <div class="red">
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed odit eius totam earum ea blanditiis
+                    dolor
+                    autem aspernatur cumque doloremque quasi reiciendis, ratione sunt accusantium voluptas fugit numquam
+                    amet qui? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati quo molestias facere
+                    praesentium ullam consectetur adipisci, nobis dolores sint alias tempora corrupti, similique
+                    dignissimos aliquid quas! Explicabo eaque officia sint! Lorem ipsum dolor sit, amet consectetur
+                    adipisicing elit. Commodi, beatae pariatur aspernatur voluptatem illum expedita reprehenderit,
+                    quibusdam veritatis excepturi quam at. Tenetur cumque, laudantium eos cupiditate possimus dolorum
+                    ullam doloribus.
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed odit eius totam earum ea blanditiis
+                    dolor
+                    autem aspernatur cumque doloremque quasi reiciendis, ratione sunt accusantium voluptas fugit numquam
+                    amet qui? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati quo molestias facere
+                    praesentium ullam consectetur adipisci, nobis dolores sint alias tempora corrupti, similique
+                    dignissimos aliquid quas! Explicabo eaque officia sint! Lorem ipsum dolor sit, amet consectetur
+                    adipisicing elit. Commodi, beatae pariatur aspernatur voluptatem illum expedita reprehenderit,
+                    quibusdam veritatis excepturi quam at. Tenetur cumque, laudantium eos cupiditate possimus dolorum
+                    ullam doloribus.
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed odit eius totam earum ea blanditiis
+                    dolor
+                    autem aspernatur cumque doloremque quasi reiciendis, ratione sunt accusantium voluptas fugit numquam
+                    amet qui? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati quo molestias facere
+                    praesentium ullam consectetur adipisci, nobis dolores sint alias tempora corrupti, similique
+                    dignissimos aliquid quas! Explicabo eaque officia sint! Lorem ipsum dolor sit, amet consectetur
+                    adipisicing elit. Commodi, beatae pariatur aspernatur voluptatem illum expedita reprehenderit,
+                    quibusdam veritatis excepturi quam at. Tenetur cumque, laudantium eos cupiditate possimus dolorum
+                    ullam doloribus.
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed odit eius totam earum ea blanditiis
+                    dolor
+                    autem aspernatur cumque doloremque quasi reiciendis, ratione sunt accusantium voluptas fugit numquam
+                    amet qui? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati quo molestias facere
+                    praesentium ullam consectetur adipisci, nobis dolores sint alias tempora corrupti, similique
+                    dignissimos aliquid quas! Explicabo eaque officia sint! Lorem ipsum dolor sit, amet consectetur
+                    adipisicing elit. Commodi, beatae pariatur aspernatur voluptatem illum expedita reprehenderit,
+                    quibusdam veritatis excepturi quam at. Tenetur cumque, laudantium eos cupiditate possimus dolorum
+                    ullam doloribus. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed odit eius totam earum
+                    ea blanditiis
+                    dolor
+                    autem aspernatur cumque doloremque quasi reiciendis, ratione sunt accusantium voluptas fugit numquam
+                    amet qui? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati quo molestias facere
+                    praesentium ullam consectetur adipisci, nobis dolores sint alias tempora corrupti, similique
+                    dignissimos aliquid quas! Explicabo eaque officia sint! Lorem ipsum dolor sit, amet consectetur
+                    adipisicing elit. Commodi, beatae pariatur aspernatur voluptatem illum expedita reprehenderit,
+                    quibusdam veritatis excepturi quam at. Tenetur cumque, laudantium eos cupiditate possimus dolorum
+                    ullam doloribus. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed odit eius totam earum
+                    ea blanditiis
+                    dolor
+                    autem aspernatur cumque doloremque quasi reiciendis, ratione sunt accusantium voluptas fugit numquam
+                    amet qui? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati quo molestias facere
+                    praesentium ullam consectetur adipisci, nobis dolores sint alias tempora corrupti, similique
+                    dignissimos aliquid quas! Explicabo eaque officia sint! Lorem ipsum dolor sit, amet consectetur
+                    adipisicing elit. Commodi, beatae pariatur aspernatur voluptatem illum expedita reprehenderit,
+                    quibusdam veritatis excepturi quam at. Tenetur cumque, laudantium eos cupiditate possimus dolorum
+                    ullam doloribus. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed odit eius totam earum
+                    ea blanditiis
+                    dolor
+                    autem aspernatur cumque doloremque quasi reiciendis, ratione sunt accusantium voluptas fugit numquam
+                    amet qui? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati quo molestias facere
+                    praesentium ullam consectetur adipisci, nobis dolores sint alias tempora corrupti, similique
+                    dignissimos aliquid quas! Explicabo eaque officia sint! Lorem ipsum dolor sit, amet consectetur
+                    adipisicing elit. Commodi, beatae pariatur aspernatur voluptatem illum expedita reprehenderit,
+                    quibusdam veritatis excepturi quam at. Tenetur cumque, laudantium eos cupiditate possimus dolorum
+                    ullam doloribus.
+                </p>
+            </div>
 
-        </main>
-        <button class="original"> SUBSCRIBE </button>
-        <button class="offset"> SUBSCRIBE</button>
+            <aside class="blue">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed minima aperiam magni placeat perferendis
+                    possimus iusto cupiditate ipsam quia. Sit, laudantium possimus? Aperiam velit culpa porro nostrum
+                    vel
+                    non. Ab?</p>
+            </aside>
+        </div>
+        <footer class="green">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia laboriosam nostrum ipsa earum,
+                optio
+                odit est libero, sapiente totam soluta itaque? Maiores vero ad doloribus itaque laboriosam, quas
+                autem!
+                Illum.</p>
+        </footer>
     </div>
 
 </body>
