building css grid templates and added notes

--- a/HTML_CSS/CSS_Fundamentals/index.html
+++ b/HTML_CSS/CSS_Fundamentals/index.html
@@ -11,91 +11,15 @@
 
 <body>
     <div class="container">
-        <div class="flex-page">
-            <div class="red">
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed odit eius totam earum ea blanditiis
-                    dolor
-                    autem aspernatur cumque doloremque quasi reiciendis, ratione sunt accusantium voluptas fugit numquam
-                    amet qui? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati quo molestias facere
-                    praesentium ullam consectetur adipisci, nobis dolores sint alias tempora corrupti, similique
-                    dignissimos aliquid quas! Explicabo eaque officia sint! Lorem ipsum dolor sit, amet consectetur
-                    adipisicing elit. Commodi, beatae pariatur aspernatur voluptatem illum expedita reprehenderit,
-                    quibusdam veritatis excepturi quam at. Tenetur cumque, laudantium eos cupiditate possimus dolorum
-                    ullam doloribus.
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed odit eius totam earum ea blanditiis
-                    dolor
-                    autem aspernatur cumque doloremque quasi reiciendis, ratione sunt accusantium voluptas fugit numquam
-                    amet qui? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati quo molestias facere
-                    praesentium ullam consectetur adipisci, nobis dolores sint alias tempora corrupti, similique
-                    dignissimos aliquid quas! Explicabo eaque officia sint! Lorem ipsum dolor sit, amet consectetur
-                    adipisicing elit. Commodi, beatae pariatur aspernatur voluptatem illum expedita reprehenderit,
-                    quibusdam veritatis excepturi quam at. Tenetur cumque, laudantium eos cupiditate possimus dolorum
-                    ullam doloribus.
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed odit eius totam earum ea blanditiis
-                    dolor
-                    autem aspernatur cumque doloremque quasi reiciendis, ratione sunt accusantium voluptas fugit numquam
-                    amet qui? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati quo molestias facere
-                    praesentium ullam consectetur adipisci, nobis dolores sint alias tempora corrupti, similique
-                    dignissimos aliquid quas! Explicabo eaque officia sint! Lorem ipsum dolor sit, amet consectetur
-                    adipisicing elit. Commodi, beatae pariatur aspernatur voluptatem illum expedita reprehenderit,
-                    quibusdam veritatis excepturi quam at. Tenetur cumque, laudantium eos cupiditate possimus dolorum
-                    ullam doloribus.
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed odit eius totam earum ea blanditiis
-                    dolor
-                    autem aspernatur cumque doloremque quasi reiciendis, ratione sunt accusantium voluptas fugit numquam
-                    amet qui? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati quo molestias facere
-                    praesentium ullam consectetur adipisci, nobis dolores sint alias tempora corrupti, similique
-                    dignissimos aliquid quas! Explicabo eaque officia sint! Lorem ipsum dolor sit, amet consectetur
-                    adipisicing elit. Commodi, beatae pariatur aspernatur voluptatem illum expedita reprehenderit,
-                    quibusdam veritatis excepturi quam at. Tenetur cumque, laudantium eos cupiditate possimus dolorum
-                    ullam doloribus. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed odit eius totam earum
-                    ea blanditiis
-                    dolor
-                    autem aspernatur cumque doloremque quasi reiciendis, ratione sunt accusantium voluptas fugit numquam
-                    amet qui? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati quo molestias facere
-                    praesentium ullam consectetur adipisci, nobis dolores sint alias tempora corrupti, similique
-                    dignissimos aliquid quas! Explicabo eaque officia sint! Lorem ipsum dolor sit, amet consectetur
-                    adipisicing elit. Commodi, beatae pariatur aspernatur voluptatem illum expedita reprehenderit,
-                    quibusdam veritatis excepturi quam at. Tenetur cumque, laudantium eos cupiditate possimus dolorum
-                    ullam doloribus. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed odit eius totam earum
-                    ea blanditiis
-                    dolor
-                    autem aspernatur cumque doloremque quasi reiciendis, ratione sunt accusantium voluptas fugit numquam
-                    amet qui? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati quo molestias facere
-                    praesentium ullam consectetur adipisci, nobis dolores sint alias tempora corrupti, similique
-                    dignissimos aliquid quas! Explicabo eaque officia sint! Lorem ipsum dolor sit, amet consectetur
-                    adipisicing elit. Commodi, beatae pariatur aspernatur voluptatem illum expedita reprehenderit,
-                    quibusdam veritatis excepturi quam at. Tenetur cumque, laudantium eos cupiditate possimus dolorum
-                    ullam doloribus. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed odit eius totam earum
-                    ea blanditiis
-                    dolor
-                    autem aspernatur cumque doloremque quasi reiciendis, ratione sunt accusantium voluptas fugit numquam
-                    amet qui? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati quo molestias facere
-                    praesentium ullam consectetur adipisci, nobis dolores sint alias tempora corrupti, similique
-                    dignissimos aliquid quas! Explicabo eaque officia sint! Lorem ipsum dolor sit, amet consectetur
-                    adipisicing elit. Commodi, beatae pariatur aspernatur voluptatem illum expedita reprehenderit,
-                    quibusdam veritatis excepturi quam at. Tenetur cumque, laudantium eos cupiditate possimus dolorum
-                    ullam doloribus.
-                </p>
-            </div>
-
-            <aside class="blue">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed minima aperiam magni placeat perferendis
-                    possimus iusto cupiditate ipsam quia. Sit, laudantium possimus? Aperiam velit culpa porro nostrum
-                    vel
-                    non. Ab?</p>
-            </aside>
+        <div class="container-one">
+            <div class="el el-1">One</div>
+            <div class="el el-2">Two</div>
+            <div class="el el-3">Three</div>
+            <div class="el el-4">Four</div>
+            <!-- <div class="el el-5">Five</div>
+            <div class="el el-6">Six</div> -->
         </div>
-        <footer class="green">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia laboriosam nostrum ipsa earum,
-                optio
-                odit est libero, sapiente totam soluta itaque? Maiores vero ad doloribus itaque laboriosam, quas
-                autem!
-                Illum.</p>
-        </footer>
     </div>
-
 </body>
 
 </html>
