css grid styling rows

--- a/HTML_CSS/CSS_Fundamentals/index.html
+++ b/HTML_CSS/CSS_Fundamentals/index.html
@@ -16,8 +16,8 @@
             <div class="el el-2">Two</div>
             <div class="el el-3">Three</div>
             <div class="el el-4">Four</div>
-            <!-- <div class="el el-5">Five</div>
-            <div class="el el-6">Six</div> -->
+            <div class="el el-5">Five</div>
+            <div class="el el-6">Six</div>
         </div>
     </div>
 </body>
