adding js to pywebdev

--- a/HTML_CSS/WebDesign/PyWebDev/index.html
+++ b/HTML_CSS/WebDesign/PyWebDev/index.html
@@ -10,13 +10,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Permanent+Marker&display=swap"
         rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <title>PyWebDev</title>
 </head>
 
 <body>
     <div class="main-container">
         <div class="grid-2-cols">
-            <p>PyWebDev.com</p>
+            <p id="navbar-logo-text">PyWebDev.com</p>
             <nav>
                 <ul class="nav-bar-elms">
                     <li>Community</li>
@@ -40,7 +43,7 @@
             </div>
             <div class="header-images">
                 <img src="../images/light-code-sc.png" alt="light-theme-code" class="light-theme-code">
-                <!-- <img src="../images/dark-code-sc.png" alt="dark-theme-code" class="dark-theme-code"> -->
+                <img src="../images/dark-code-sc.png" alt="dark-theme-code" class="dark-theme-code">
             </div>
         </header>
 
@@ -67,7 +70,7 @@
 
         <section>
             <div class="grid-3-cols">
-                <img src="../images/desk-full-background.jpg" alt="desk-setup">
+                <img src="../images/python-code.jpg" alt="python code on screen">
                 <div class="testimonial-box">
                     <h2>Simple. Elegant. Popular.</h2>
                     <blockquote>Python is incredibly easy to read, so developers typically have no
@@ -147,7 +150,7 @@
 
 
     </div>
-
+    <script src="script.js"></script>
 </body>
 
 </html>
