margin and padding added to pywebdev index

--- a/HTML_CSS/WebDesign/PyWebDev/index.html
+++ b/HTML_CSS/WebDesign/PyWebDev/index.html
@@ -47,7 +47,7 @@
             </div>
         </header>
 
-        <section>
+        <section class="why-section">
             <h2>Why develop using Python?</h2>
             <div class="grid-3-cols">
                 <div>
@@ -71,17 +71,16 @@
         <section>
             <div class="grid-3-cols">
                 <img src="../images/python-code.jpg" alt="python code on screen">
-                <div class="testimonial-box">
-                    <h2>Simple. Elegant. Popular.</h2>
-                    <blockquote>Python is incredibly easy to read, so developers typically have no
-                        problems
-                        understanding code written by
-                        their fellow programmers. This makes the communication between developers working on the same
-                        project
-                        much more efficient.
+                <div class="testimonial-flex-box">
+                    <h2 class="testimonial-title">Simple. Elegant. Popular.</h2>
+                    <blockquote>
+                        Python is incredibly easy to read, so developers typically have no
+                        problems understanding code written by their fellow programmers.
+                        This makes the communication
+                        between developers working on the same project much more efficient.
                     </blockquote>
+                    <p class="testimonial-author"> - Jose Servin (PyWebDev Community Member)</p>
                 </div>
-
             </div>
         </section>
 
@@ -89,15 +88,16 @@
             <h2>Python Frameworks</h2>
             <div class="grid-3-cols">
                 <figure>
-                    <!-- <img src="../images/django.png" alt=""> -->
+                    <!-- <img src="../images/Django.svg" alt="Django logo"> -->
                     <div class="framework-box">
-                        <h2>Django</h2>
+                        <img src="../images/python-code.jpg" alt="python code on screen">
+                        <h3>Django</h3>
                         <ul class="framework-details">
                             <li>
                                 <span>Great for fully-fledged web apps.</span>
                             </li>
                             <li>
-                                <span>Integrated with Oracle SQL, PostgreSQL, MySQL,</span>
+                                <span>Strong Database Integration</span>
                             </li>
                             <li>
                                 <span>Models-Templates-Views Architecture</span>
@@ -108,9 +108,10 @@
 
                 </figure>
                 <figure>
-                    <!-- <img src="../images/1200px-Flask_logo.svg.png" alt=""> -->
+                    <!-- <img src="../images/flask-logo.svg" alt="Flask logo"> -->
                     <div class="framework-box">
-                        <h2>Flask</h2>
+                        <img src="../images/python-code.jpg" alt="python code on screen">
+                        <h3>Flask</h3>
                         <ul class="framework-details">
                             <li>
                                 <span>Provides simple and manageable solutions.</span>
@@ -127,9 +128,10 @@
 
                 </figure>
                 <figure>
-                    <!-- <img src="../images/falcon.png" alt=""> -->
+                    <!-- <img src="../images/falcon-logo.svg" alt="Falcon logo"> -->
                     <div class="framework-box">
-                        <h2>Falcon</h2>
+                        <img src="../images/python-code.jpg" alt="python code on screen">
+                        <h3>Falcon</h3>
                         <ul class="framework-details">
                             <li>
                                 <span>Minimalist ASGI/WSGI framework</span>
@@ -138,17 +140,28 @@
                                 <span>Encourages the REST architectural style</span>
                             </li>
                             <li>
-                                <span>"Do as little as possible while remaining highly effective"</span>
+                                <span>Lean solution</span>
                             </li>
                         </ul>
                         <button>Learn More</button>
                     </div>
-
                 </figure>
             </div>
         </section>
 
 
+        <section>
+            <div class="courses-flex-box">
+                <h2>Courses to get Started</h2>
+                <div class="course-1"></div>
+                <div class="course-2"></div>
+            </div>
+        </section>
+
+        <footer>
+            Copyright © 2027 by Jose Servin. Part of "Build Responsive Real-World Websites with HTML and CSS" online
+            course. Use for learning purposes only.
+        </footer>
     </div>
     <script src="script.js"></script>
 </body>
