added absolute python logo and framework images

--- a/HTML_CSS/WebDesign/PyWebDev/index.html
+++ b/HTML_CSS/WebDesign/PyWebDev/index.html
@@ -72,7 +72,11 @@
             <div class="grid-3-cols">
                 <img src="../images/python-code.jpg" alt="python code on screen">
                 <div class="testimonial-flex-box">
-                    <h2 class="testimonial-title">Simple. Elegant. Popular.</h2>
+                    <h2 class="testimonial-title">
+                        <span id="simple">Simple. </span>
+                        <span id="elegant">Elegant. </span>
+                        <span id="popular">Popular.</span>
+                    </h2>
                     <blockquote>
                         Python is incredibly easy to read, so developers typically have no
                         problems understanding code written by their fellow programmers.
@@ -80,6 +84,7 @@
                         between developers working on the same project much more efficient.
                     </blockquote>
                     <p class="testimonial-author"> - Jose Servin (PyWebDev Community Member)</p>
+                    <img src="../images/python-logo.png" alt="" id="small-python">
                 </div>
             </div>
         </section>
@@ -88,10 +93,9 @@
             <h2>Python Frameworks</h2>
             <div class="grid-3-cols">
                 <figure>
-                    <!-- <img src="../images/Django.svg" alt="Django logo"> -->
                     <div class="framework-box">
-                        <img src="../images/python-code.jpg" alt="python code on screen">
-                        <h3>Django</h3>
+                        <img src="../images/Django.svg" alt="python code on screen" class="framework-img">
+                        <h3 class="framework-title">Django</h3>
                         <ul class="framework-details">
                             <li>
                                 <span>Great for fully-fledged web apps.</span>
@@ -108,10 +112,9 @@
 
                 </figure>
                 <figure>
-                    <!-- <img src="../images/flask-logo.svg" alt="Flask logo"> -->
                     <div class="framework-box">
-                        <img src="../images/python-code.jpg" alt="python code on screen">
-                        <h3>Flask</h3>
+                        <img src="../images/flask-logo.svg" alt="python code on screen" class="framework-img">
+                        <h3 class="framework-title">Flask</h3>
                         <ul class="framework-details">
                             <li>
                                 <span>Provides simple and manageable solutions.</span>
@@ -128,10 +131,9 @@
 
                 </figure>
                 <figure>
-                    <!-- <img src="../images/falcon-logo.svg" alt="Falcon logo"> -->
                     <div class="framework-box">
-                        <img src="../images/python-code.jpg" alt="python code on screen">
-                        <h3>Falcon</h3>
+                        <img src="../images/falcon-logo.svg" alt="python code on screen" class="framework-img">
+                        <h3 class="framework-title">Falcon</h3>
                         <ul class="framework-details">
                             <li>
                                 <span>Minimalist ASGI/WSGI framework</span>
@@ -150,13 +152,13 @@
         </section>
 
 
-        <section>
+        <!-- <section>
             <div class="courses-flex-box">
                 <h2>Courses to get Started</h2>
                 <div class="course-1"></div>
                 <div class="course-2"></div>
             </div>
-        </section>
+        </section> -->
 
         <footer>
             Copyright © 2027 by Jose Servin. Part of "Build Responsive Real-World Websites with HTML and CSS" online
