added spacing and fontsize system to pywebdev index

--- a/HTML_CSS/WebDesign/PyWebDev/index.html
+++ b/HTML_CSS/WebDesign/PyWebDev/index.html
@@ -19,7 +19,7 @@
 <body>
     <div class="main-container">
         <div class="grid-2-cols">
-            <p id="navbar-logo-text">PyWebDev.com</p>
+            <p id="navbar-logo-text">PyWebDev.org</p>
             <nav>
                 <ul class="nav-bar-elms">
                     <li>Community</li>
@@ -48,7 +48,7 @@
         </header>
 
         <section class="why-section">
-            <h2>Why develop using Python?</h2>
+            <h2>Why Python?</h2>
             <div class="grid-3-cols">
                 <div>
                     <h3>Rich Standard Library</h3>
