finished first version of typography implementation on pywebdev index

--- a/HTML_CSS/WebDesign/PyWebDev/index.html
+++ b/HTML_CSS/WebDesign/PyWebDev/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Permanent+Marker&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Permanent+Marker&display=swap"
         rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -39,7 +40,7 @@
                     searching for Docs, want to stay up to date on interesting topics like Bootstrap, Flask
                     and Frontend trends or simply want to meet other PyWebDevs - join now!
                 </p>
-                <button class="header-button">Join the Community</button>
+                <a role="button" class="button button-big" href="#">Join the Community</a>
             </div>
             <div class="header-images">
                 <img src="../images/light-code-sc.png" alt="light-theme-code" class="light-theme-code">
@@ -68,7 +69,7 @@
             </div>
         </section>
 
-        <section>
+        <section class="testimonial-section">
             <div class="grid-3-cols">
                 <img src="../images/python-code.jpg" alt="python code on screen">
                 <div class="testimonial-flex-box">
@@ -94,7 +95,7 @@
             <div class="grid-3-cols">
                 <figure>
                     <div class="framework-box">
-                        <img src="../images/Django.svg" alt="python code on screen" class="framework-img">
+                        <img src="../images/python-code.jpg" alt="Django logo" class="framework-image">
                         <h3 class="framework-title">Django</h3>
                         <ul class="framework-details">
                             <li>
@@ -107,13 +108,13 @@
                                 <span>Models-Templates-Views Architecture</span>
                             </li>
                         </ul>
-                        <button>Learn More</button>
+                        <button class="button button-small">Learn More</button>
                     </div>
 
                 </figure>
                 <figure>
                     <div class="framework-box">
-                        <img src="../images/flask-logo.svg" alt="python code on screen" class="framework-img">
+                        <img src="../images/python-code.jpg" alt="Flask logo" class="framework-image">
                         <h3 class="framework-title">Flask</h3>
                         <ul class="framework-details">
                             <li>
@@ -126,13 +127,13 @@
                                 <span>Prototype Building solution.</span>
                             </li>
                         </ul>
-                        <button>Learn More</button>
+                        <button class="button button-small">Learn More</button>
                     </div>
 
                 </figure>
                 <figure>
                     <div class="framework-box">
-                        <img src="../images/falcon-logo.svg" alt="python code on screen" class="framework-img">
+                        <img src="../images/python-code.jpg" alt="Flacon logo" class="framework-image">
                         <h3 class="framework-title">Falcon</h3>
                         <ul class="framework-details">
                             <li>
@@ -145,7 +146,7 @@
                                 <span>Lean solution</span>
                             </li>
                         </ul>
-                        <button>Learn More</button>
+                        <button class="button button-small">Learn More</button>
                     </div>
                 </figure>
             </div>
@@ -159,12 +160,18 @@
                 <div class="course-2"></div>
             </div>
         </section> -->
-
-        <footer>
+    </div>
+    <!-- <footer class="grid-6-cols">
+        <div class="footer-div"></div>
+        <div class="footer-div"></div>
+        <div class="footer-div"></div>
+        <div class="footer-div"></div>
+        <div class="footer-div"></div>
+        <p>
             Copyright © 2027 by Jose Servin. Part of "Build Responsive Real-World Websites with HTML and CSS" online
             course. Use for learning purposes only.
-        </footer>
-    </div>
+        </p>
+    </footer> -->
     <script src="script.js"></script>
 </body>
 
